// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateSandbox Message Part Component renders with done status 1`] = `
<div>
  <div
    class="text-sm px-3.5 py-3 border border-border bg-background rounded-md font-mono"
  >
    <div
      class="flex items-center gap-1 text-muted-foreground mb-1 font-semibold"
    >
      <div
        data-testid="box-icon"
      >
        BoxIcon
      </div>
      Create Sandbox
    </div>
    <div
      class="relative pl-6 min-h-5"
    >
      <span
        class="inline-flex items-center justify-center w-5 h-5 absolute left-0 top-0"
      >
        <div
          data-testid="check-icon"
        >
          CheckIcon
        </div>
      </span>
      <span>
        Sandbox created successfully
      </span>
    </div>
  </div>
</div>
`;

exports[`CreateSandbox Message Part Component renders with done status and sandboxId 1`] = `
<div>
  <div
    class="text-sm px-3.5 py-3 border border-border bg-background rounded-md font-mono"
  >
    <div
      class="flex items-center gap-1 text-muted-foreground mb-1 font-semibold"
    >
      <div
        data-testid="box-icon"
      >
        BoxIcon
      </div>
      Create Sandbox
    </div>
    <div
      class="relative pl-6 min-h-5"
    >
      <span
        class="inline-flex items-center justify-center w-5 h-5 absolute left-0 top-0"
      >
        <div
          data-testid="check-icon"
        >
          CheckIcon
        </div>
      </span>
      <span>
        Sandbox created successfully
      </span>
    </div>
  </div>
</div>
`;

exports[`CreateSandbox Message Part Component renders with error status 1`] = `
<div>
  <div
    class="text-sm px-3.5 py-3 border border-border bg-background rounded-md font-mono"
  >
    <div
      class="flex items-center gap-1 text-muted-foreground mb-1 font-semibold"
    >
      <div
        data-testid="box-icon"
      >
        BoxIcon
      </div>
      Create Sandbox
    </div>
    <div
      class="relative pl-6 min-h-5"
    >
      <span
        class="inline-flex items-center justify-center w-5 h-5 absolute left-0 top-0"
      >
        <div
          data-testid="x-icon"
        >
          XIcon
        </div>
      </span>
      <span>
        Failed to create sandbox
      </span>
    </div>
  </div>
</div>
`;

exports[`CreateSandbox Message Part Component renders with error status and error message 1`] = `
<div>
  <div
    class="text-sm px-3.5 py-3 border border-border bg-background rounded-md font-mono"
  >
    <div
      class="flex items-center gap-1 text-muted-foreground mb-1 font-semibold"
    >
      <div
        data-testid="box-icon"
      >
        BoxIcon
      </div>
      Create Sandbox
    </div>
    <div
      class="relative pl-6 min-h-5"
    >
      <span
        class="inline-flex items-center justify-center w-5 h-5 absolute left-0 top-0"
      >
        <div
          data-testid="x-icon"
        >
          XIcon
        </div>
      </span>
      <span>
        Failed to create sandbox
      </span>
    </div>
  </div>
</div>
`;

exports[`CreateSandbox Message Part Component renders with loading status 1`] = `
<div>
  <div
    class="text-sm px-3.5 py-3 border border-border bg-background rounded-md font-mono"
  >
    <div
      class="flex items-center gap-1 text-muted-foreground mb-1 font-semibold"
    >
      <div
        data-testid="box-icon"
      >
        BoxIcon
      </div>
      Create Sandbox
    </div>
    <div
      class="relative pl-6 min-h-5"
    >
      <span
        class="inline-flex items-center justify-center w-5 h-5 absolute left-0 top-0"
      >
        <div
          data-testid="ai-loader"
        >
          Loader
        </div>
      </span>
      <span>
        Creating Sandbox
      </span>
    </div>
  </div>
</div>
`;

exports[`CreateSandbox Message Part Component renders with loading status without sandboxId 1`] = `
<div>
  <div
    class="text-sm px-3.5 py-3 border border-border bg-background rounded-md font-mono"
  >
    <div
      class="flex items-center gap-1 text-muted-foreground mb-1 font-semibold"
    >
      <div
        data-testid="box-icon"
      >
        BoxIcon
      </div>
      Create Sandbox
    </div>
    <div
      class="relative pl-6 min-h-5"
    >
      <span
        class="inline-flex items-center justify-center w-5 h-5 absolute left-0 top-0"
      >
        <div
          data-testid="ai-loader"
        >
          Loader
        </div>
      </span>
      <span>
        Creating Sandbox
      </span>
    </div>
  </div>
</div>
`;
